# G-TEST-project

./: CMakeLists.txt  main.cpp
include/: HelperFunctions.h  Matrix.h  MatrixError.h
src/: HelperFunctions.cpp  Matrix.h  MatrixError.cpp  MatrixError.h  Matrix_impl.h
test/: CMakeLists.txt  HelperFunctionsTest.cpp  MatrixTest.cpp
test/lib/googletest-main/googletest/cmake/: internal_utils.cmake
